kube/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jph-hello-world
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: jph-hello-world
    spec:
      containers:
      - name: jph-hello-world
        image: jph-hello-world:v1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 4000
