kube/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jph-hello-world-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: jph-hello-world-service
          servicePort: 80
        path: /
